# r2-compiler

./: .gitignore  AGENTS.md  AI-CONTEXT.md  Cargo.toml  PROCESS.md  README.md  RESUME.md  install.sh
apiaries/rocker-rig/: apiary.toml
apiaries/rocker-rig/devices/: roster.toml
catalogue/boards/: _README.md
catalogue/boards/esp32-c6-dfr1117/: AI-CONTEXT.md  BOARD.md  board.toml
catalogue/boards/esp32-s3-devkitc/: AI-CONTEXT.md  BOARD.md  board.toml
catalogue/boards/esp32-s3-dfr1195/: AI-CONTEXT.md  BOARD.md  board.toml
catalogue/boards/esp32-s3-xiao/: AI-CONTEXT.md  BOARD.md  board.toml
catalogue/ensembles/: _README.md
catalogue/ensembles/rocker-sensor/plugins/comms/data-tcp/: AI-CONTEXT.md  Cargo.toml  PLUGIN.md  plugin.toml
catalogue/ensembles/rocker-sensor/plugins/comms/data-tcp/conversation/: 2026-05-31-metadata-authored-01.md
catalogue/ensembles/rocker-sensor/plugins/comms/data-tcp/src/: lib.rs
catalogue/ensembles/rocker-sensor/plugins/comms/log-tcp/: AI-CONTEXT.md  Cargo.toml  PLUGIN.md  plugin.toml
catalogue/ensembles/rocker-sensor/plugins/comms/log-tcp/conversation/: 2026-05-31-metadata-authored-01.md
catalogue/ensembles/rocker-sensor/plugins/comms/log-tcp/src/: lib.rs
catalogue/ensembles/rocker-sensor/plugins/comms/reset-tcp/: AI-CONTEXT.md  Cargo.toml  PLUGIN.md  plugin.toml
catalogue/ensembles/rocker-sensor/plugins/comms/reset-tcp/conversation/: 2026-05-31-metadata-authored-01.md
catalogue/ensembles/rocker-sensor/plugins/comms/reset-tcp/src/: lib.rs
catalogue/ensembles/rocker-sensor/plugins/indicator/led/: AI-CONTEXT.md  Cargo.toml  PLUGIN.md  plugin.toml
catalogue/ensembles/rocker-sensor/plugins/indicator/led/conversation/: 2026-05-31-metadata-authored-01.md
catalogue/ensembles/rocker-sensor/plugins/indicator/led/src/: lib.rs
catalogue/ensembles/rocker-sensor/plugins/sensor/adxl355/: AI-CONTEXT.md  Cargo.toml  PLUGIN.md  plugin.toml
catalogue/ensembles/rocker-sensor/plugins/sensor/adxl355/conversation/: 2026-05-31-metadata-authored-01.md
catalogue/ensembles/rocker-sensor/plugins/sensor/adxl355/src/: lib.rs
catalogue/ensembles/rocker-sensor/plugins/sensor/battery-adc/: AI-CONTEXT.md  Cargo.toml  PLUGIN.md  plugin.toml
catalogue/ensembles/rocker-sensor/plugins/sensor/battery-adc/conversation/: 2026-05-31-metadata-authored-01.md
catalogue/ensembles/rocker-sensor/plugins/sensor/battery-adc/src/: lib.rs
catalogue/ensembles/rocker-sensor/plugins/sensor/lis2dh/: AI-CONTEXT.md  Cargo.toml  PLUGIN.md  README.md  plugin.toml
catalogue/ensembles/rocker-sensor/plugins/sensor/lis2dh/conversation/: 2026-05-31-metadata-authored-01.md
catalogue/ensembles/rocker-sensor/plugins/sensor/lis2dh/src/: lib.rs
catalogue/ensembles/rocker-sensor/plugins/storage/sd-card/: AI-CONTEXT.md  Cargo.toml  PLUGIN.md  plugin.toml
catalogue/ensembles/rocker-sensor/plugins/storage/sd-card/conversation/: 2026-05-31-metadata-authored-01.md
catalogue/ensembles/rocker-sensor/plugins/storage/sd-card/src/: lib.rs
catalogue/ensembles/transient-test/: ensemble.yaml
catalogue/ensembles/transient-test/plugins/sensor/simulated/: Cargo.toml
catalogue/ensembles/transient-test/plugins/sensor/simulated/src/: lib.rs
conversation/: 2026-05-31-r2-compiler-design-01.md
crates/: _SYNC.md  _VERSIONS.toml
crates/r2-def/: Cargo.toml  README.md
crates/r2-def/src/: ensemble.rs  error.rs  lib.rs  parse.rs  plugin.rs  sentant.rs
crates/r2-def/tests/: conformance.rs  round_trip.rs  web_plugin.rs  web_template.rs
crates/r2-def/vectors/: notekeeper.ensemble.yaml  r2-def-vectors.json  strobe.swarm.yaml  zen-quote.sentant.yaml
crates/r2-dispatch/: Cargo.toml  README.md
crates/r2-dispatch/src/: envelope.rs  lib.rs  log_drop.rs  target.rs
crates/r2-engine/: Cargo.toml
crates/r2-engine/src/: action.rs  queue.rs
crates/r2-ensemble/: Cargo.toml  README.md
crates/r2-ensemble/src/: dispatch.rs  error.rs  factory.rs  lib.rs  loaded.rs  registry.rs  supervision.rs
crates/r2-ensemble/tests/: load_dispatch.rs  supervision.rs
crates/r2-ensemble/tests/common/: mod.rs
crates/r2-plugin-comms-ble-beacon/: AI-CONTEXT.md  PLUGIN.md  plugin.toml
crates/r2-plugin-comms-ble-l2cap/: AI-CONTEXT.md  PLUGIN.md  plugin.toml
crates/r2-plugin-comms-ota-tcp/: AI-CONTEXT.md  PLUGIN.md  plugin.toml
crates/r2-plugin-crypto-software-ed25519/: Cargo.toml  README.md  plugin.toml
crates/r2-plugin-crypto-software-ed25519/src/: lib.rs
crates/r2-plugin-crypto-software-ed25519/tests/: integration.rs
crates/r2-plugin-storage-nvs/: Cargo.toml  plugin.toml
crates/r2-plugin-storage-nvs/src/: lib.rs
crates/r2-plugin-time-clock/: AI-CONTEXT.md  Cargo.toml
crates/r2-plugin-time-clock/src/: lib.rs
crates/r2-route/: Cargo.toml
orchestrator/: Cargo.toml  README.md  run.sh
orchestrator/prompts/: _base.md.tera  author-apiary.md.tera  author-board.md.tera  author-chat.md.tera  author-ensemble.md.tera  author-flash.md.tera  author-plugin.md.tera  author-provision.md.tera  author-sentant.md.tera
orchestrator/src/: apiary.rs  bridge.rs  hive.rs  main.rs  roster.rs  web.rs
orchestrator/src/composer/: flasher.rs  mod.rs
orchestrator/src/plugins/: claude_code.rs  flasher.rs  keyholder.rs  mod.rs  usb_watcher.rs
orchestrator/src/sentants/: author.rs  builder.rs  deploy.rs  mod.rs  provision.rs  roster.rs  test_coordinator.rs
orchestrator/src/substrate/: beacon_observer.rs  beacon_parser.rs  keyholder.rs  mod.rs  ota_push.rs  provision.rs  provision_handshake.rs  tg_state.rs
plan/: PLAN.md
scores/: _README.md  rocker-sensor.yaml
specifications/: OTA-REPLY-STATUS-CONTRACT.md  PART-C-I-R2WEB-HOST-DESIGN.md  SPEC-APIARY-AMENDMENT-PROPOSAL.md  SPEC-APIARY-COMPOSE.md  SPEC-APIARY-CREATE.md  SPEC-APIARY-FLASH.md  SPEC-APIARY-LAYOUT.md  SPEC-CATALOGUE-LAYOUT.md  SPEC-R2-COMPILER.md  SPEC-R2-COMPOSER.md
testing/: README.md
tools/: README.md  build-catalogue-index.py  sync-catalogue.sh  ws-test-f3.py
webapp/: README.md  build-wasm.sh  index.html  run.sh
webapp/crate/: Cargo.toml
webapp/crate/src/: lib.rs
webapp/styles/: main.css
webapp/ui/: app.js
(+83 files in other folders)
