# Cargo workspace root for r2-composer.
#
# Members:
# - crates/r2-*                              — protocol crates vendored from r2-core (host-buildable)
# - crates/r2-plugin-*                       — core plugins vendored from r2-core (always-linked)
# - catalogue/ensembles/<ens>/plugins/<…>/   — ensemble-owned plugin crates (added one-by-one per Phase 1.4-source)
#
# Excluded:
# - crates/r2-wasm                           — wasm32-only; wasm-bindgen + js-sys won't build for host
# - webapp/crate                             — wasm32-only (when it exists)
# - orchestrator                             — Rust binary; standalone build once it exists
#
# Vendoring policy: see crates/_SYNC.md. Re-run tools/sync-catalogue.sh to refresh.

[workspace]
resolver = "2"
members = [
  # Vendored R2 protocol crates (host-buildable).
  "crates/r2-engine",
  "crates/r2-fnv",
  "crates/r2-cbor",
  "crates/r2-wire",
  "crates/r2-trust",
  "crates/r2-route",
  "crates/r2-def",
  "crates/r2-dispatch",
  "crates/r2-ensemble",
  # Vendored core plugins (always-linked into every build).
  "crates/r2-plugin-crypto-software-ed25519",
  "crates/r2-plugin-storage-nvs",
  "crates/r2-plugin-time-clock",
  # Ensemble-owned plugin crates inside the catalogue. Added per Phase 1.4-source.
  "catalogue/ensembles/rocker-sensor/plugins/sensor/lis2dh",
  "catalogue/ensembles/rocker-sensor/plugins/sensor/adxl355",
  "catalogue/ensembles/rocker-sensor/plugins/sensor/battery-adc",
  # Workstation orchestrator binary (Phase 1.6+).
  "orchestrator",
]
exclude = [
  # wasm32-only.
  "crates/r2-wasm",
  "webapp/crate",
]

[workspace.package]
edition       = "2021"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/reality2-ai/r2-composer"
rust-version  = "1.75"

[workspace.dependencies]
# Vendored R2 protocol crates (paths into ./crates/) — declared here so that
# vendored crate manifests using `workspace = true` for their internal deps
# inherit through this table instead of breaking.
r2-engine    = { path = "crates/r2-engine", default-features = false }
r2-fnv       = { path = "crates/r2-fnv", default-features = false }
r2-cbor      = { path = "crates/r2-cbor", default-features = false }
r2-wire      = { path = "crates/r2-wire", default-features = false }
r2-trust     = { path = "crates/r2-trust", default-features = false }
r2-route     = { path = "crates/r2-route", default-features = false }
r2-def       = { path = "crates/r2-def", default-features = false }
r2-dispatch  = { path = "crates/r2-dispatch", default-features = false }
r2-ensemble  = { path = "crates/r2-ensemble", default-features = false }
# Embedded HAL 1.0 — abstract I²C/SPI/GPIO traits that hardware-driver
# plugins target so the plugin crate stays portable across platform HALs.
embedded-hal = { version = "1.0", default-features = false }
