[package]
name = "r2-dispatch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "R2-DISPATCH: local event dispatch contract for R2 hives. Connects the route engine's DeliverOnly decision to a sentant runtime."
readme = "README.md"
repository = "https://github.com/reality2-ai/r2-core"
keywords = ["r2", "mesh", "dispatch", "sentant", "no-std"]
categories = ["no-std", "embedded"]

[features]
default = ["std"]
std = ["async-trait", "log"]

[dependencies]
async-trait = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
