[package]
name = "r2-ensemble"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "R2-ENSEMBLE: ensemble registry and dispatch target. Loads R2-DEF ensemble scores, tracks sentant instances, and routes DeliverOnly envelopes through r2-engine."
repository = "https://github.com/reality2-ai/r2-core"
keywords = ["r2", "mesh", "ensemble", "sentant", "dispatch"]
categories = ["asynchronous"]

[dependencies]
r2-def      = { path = "../r2-def" }
r2-engine   = { path = "../r2-engine", features = ["alloc", "std"] }
r2-dispatch = { path = "../r2-dispatch", features = ["std"] }
r2-fnv      = { path = "../r2-fnv" }

async-trait = "0.1"
log = "0.4"
parking_lot = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
serde_yaml = "0.9"
env_logger = "0.11.10"
